--- a/public/assets/icon-fonts/feather/feather.css
+++ b/public/assets/icon-fonts/feather/feather.css
@@ -3,9 +3,9 @@
 @font-face {
 	font-family: "feather";
 
-	/* src: url("fonts/feather/feather-webfont.eot?t=1501841394106"); */
+	src: url("fonts/feather/feather-webfont.eot?t=1501841394106");
 	/* IE9*/
-	/* src: url("fonts/feather/feather-webfont.eot?t=1501841394106") format("embedded-opentype"), url("fonts/feather/feather-webfont.ttf") format("truetype"), url("fonts/feather/feather-webfont.svg") format("svg"); */
+	src: url("fonts/feather/feather-webfont.eot?t=1501841394106") format("embedded-opentype"), url("fonts/feather/feather-webfont.ttf") format("truetype"), url("fonts/feather/feather-webfont.svg") format("svg");
 	/* iOS 4.1- */
 }
 .fe {
