--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18195,6 +18195,7 @@ code[class*=language-] {
   }
   .landing-body .main-content {
     padding: 0;
+    margin-top: 7.5rem;
   }
   .landing-body .landing-logo-container .horizontal-logo .header-logo .desktop-logo {
     display: block;
