--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -18171,6 +18171,8 @@ code[class*=language-] {
   }
   .landing-body .app-sidebar.sticky.sticky-pin .landing-logo-container .horizontal-logo .desktop-logo {
     display: block;
+    /* width: 200px;
+    height: 50px; */
   }
   .landing-body .app-sidebar.sticky.sticky-pin.app-sidebar .side-menu__item:hover .side-menu__label {
     color: var(--primary-color) !important;
@@ -21495,3 +21497,10 @@ a:hover {
 }
 
 /* End::Width */
+/* 1024 screen */
+@media screen and (max-width: 1024px) {
+    .desktop-logo{
+        width: 200px;
+        height: 50px !important;
+    }
+}
